# DutchFeud

./: .gitignore  CMakeLists.txt  InputConfig.h  README.md
Common/: CMakeLists.txt
Common/Algo/: GenerateRandomGuid.cpp  GenerateRandomGuid.h
Common/Data/: Constants.h  Game.cpp  Game.h  GameStore.cpp  GameStore.h  Move.cpp  Move.h  MovePart.cpp  MovePart.h  PlayField.cpp  PlayField.h  PlayFieldLocation.cpp  PlayFieldLocation.h  PlayFieldSquare.cpp  PlayFieldSquare.h  Player.cpp  Player.h  PlayerStore.cpp  PlayerStore.h  Session.cpp  Session.h  SessionStore.cpp  SessionStore.h  Tile.cpp  Tile.h  TilesCollection.cpp  TilesCollection.h
Common/Tests/: CMakeLists.txt  PlayFieldLocationTests.cpp  PlayFieldSquareTests.cpp  PlayFieldTests.cpp  TileTests.cpp  TilesCollectionTests.cpp
General/: CMakeLists.txt
General/Algo/: Logger.cpp  Logger.h
General/Tests/: CMakeLists.txt
Headers/: config.h.in
Server/: CMakeLists.txt  FeudServer.cpp  FeudServer.h  main.cpp
Server/Algo/: GetServerVersion.cpp  GetServerVersion.h
WebServer/: CMakeLists.txt  Rest.cpp  Rest.h  RestSession.cpp  RestSession.h  Socket.cpp  Socket.h  ThreadPool.cpp  ThreadPool.h
WebServer/Algo/: HeaderBuilder.cpp  HeaderBuilder.h
WebServer/ExampleCertificates/: example.crt  example.key
WebServer/Tests/: CMakeLists.txt
